hphp/hack/test/typecheck/variadics/ellipsis_class_method.php.exp
File "ellipsis_class_method.php", line 6, characters 19-22:
Cannot use `...` without a **type hint** and **parameter name** in strict mode. (Typing[4223])
